--- a/index.html
+++ b/index.html
@@ -4,41 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <ul>
-            <li>Have any questions?</li>
-            <li><a href="mailto:support@example.com">support@example.com</a></li>
-            <li><a href="tel:+1814251152">+1 814 251 152</a></li>
-        </ul>
-            <li><a href="">Login</a>></li>
-            <li><a href="">Register</a>></li>
-        <ul>
-
+        <div>
+            <ul class="info">
+                <li class="info-item">Have any questions?</li>
+                <li class="info-item"><a class="info-link" href="mailto:support@example.com">support@example.com</a></li>
+                <li class="info-item"><a class="info-link" href="tel:+1814251152">+1 814 251 152</a></li>
+            </ul>
+            <ul class="info">
+                <li><a href="">Login</a>></li>
+                <li><a href="">Register</a>></li>
+            </ul>
+        </div>
+        
         <img src="img/logo.svg" alt="logo">
         <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Page</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">Shortcodes</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Contact</a></li>
+            <ul class="nav">
+                <li class="nav-item"><a href="" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Page</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Blog</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Shop</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Shortcodes</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Features</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
                 <li><button></button></li>
                 <li><button></button></li>
             </ul>
         </nav>
 
         </ul>
-        <div>
+        <div class="title">
             <p>Quickly Setup Your Website</p>
             <h1>Stepup is designed specially for Startups</h1>
         </div>  
-        <a href="#">BUY NOW</a>
+        <a href="#" class="btn">BUY NOW</a>
     </header>
     <main>
         <h2>100% Responsive Design</h2>
