--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
                     </ul>
                 </div>
                 <div class="head">
-                    <img src="img/logo.svg" alt="logo">
+                    <img src="img/logo.png" alt="logo">
                     <nav>
                         <ul class="nav">
                             <li class="nav-item"><a href="" class="nav-link active">Home</a></li>
@@ -72,9 +73,9 @@
             </div>
         </div>
 
-        <div class="wrapper!">
+        <div class="wrapper">
             <h2 class="title-h2"><span>About Our Company</span>Who We Are?</h2>
-            <div></div>
+            <div class="line"></div>
             <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
             <p class="decription">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
             <ul class="list-decription">
