--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/all.min.css">
+
+    
 </head>
 <body>
     <header>
@@ -16,16 +19,16 @@
                 <div class="nav-top">
                     <ul class="info info-left">
                         <li class="info-item">Have any questions?</li>
-                        <li class="info-item"><a class="info-link" href="mailto:support@example.com">support@example.com</a></li>
-                        <li class="info-item"><a class="info-link" href="tel:+1814251152">+1 814 251 152</a></li>
+                        <li class="info-item"><a class="info-link" href="mailto:support@example.com"><i class="fas fa-envelope"></i>support@example.com</a></li>
+                        <li class="info-item"><a class="info-link" href="tel:+1814251152"><i class="fas fa-phone-alt"></i>+1 814 251 152</a></li>
                     </ul>
                     <ul class="info info-right">
-                        <li class="info-item"><a href="">Login</a></li>
-                        <li class="info-item"><a href="">Register</a></li>
+                        <li class="info-item"><a class="info-link" href=""><i class="fas fa-sign-out-alt"></i>Login</a></li>
+                        <li class="info-item"><a class="info-link register" href="">Register</a></li>
                     </ul>
                 </div>
                 <div class="head">
-                    <img src="img/logo.png" alt="logo">
+                    <img class="logo" src="img/logo-main.svg" alt="logo">
                     <nav>
                         <ul class="nav">
                             <li class="nav-item"><a href="" class="nav-link active">Home</a></li>
@@ -36,8 +39,8 @@
                             <li class="nav-item"><a href="" class="nav-link">Shortcodes</a></li>
                             <li class="nav-item"><a href="" class="nav-link">Features</a></li>
                             <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-                            <li><button></button></li>
-                            <li><button></button></li>
+                            <li class="nav-item-btn"><button class="nav-btn"><i class="fas fa-search"></i></button></li>
+                            <li class="nav-item-btn"><button class="nav-btn"><i class="fas fa-share-alt"></i></button></li>
                         </ul>
                     </nav>
                 </div>    
@@ -95,5 +98,6 @@
     <footer>
 
     </footer>
+    <script src="js/all.min.js"></script>
 </body>
 </html>
