--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700,800&display=swap">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/all.min.css">
@@ -61,38 +61,46 @@
             <div class="wrapper">
                 <div class="box center">
                     <div class="box-item">
+                        <div class="box-icon"><i class="fas fa-mobile-alt"></i></div>
                         <h2>100% Responsive Design</h2>
-                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                        <p class="decription">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
                     </div>
                     <div class="box-item box-item-center">
+                        <div class="box-icon"><i class="far fa-lightbulb"></i></div>
                         <h2>Unlimited Features</h2>
-                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                        <p class="decription">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
                     </div>
                     <div class="box-item">
+                        <div class="box-icon box-icon-pen"><i class="fas fa-pencil-alt"></i></div>
                         <h2>Fully Customizable</h2>
-                        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                        <p class="decription">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="wrapper">
-            <h2 class="title-h2"><span>About Our Company</span>Who We Are?</h2>
-            <div class="line"></div>
-            <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
-            <p class="decription">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
-            <ul class="list-decription">
-                <li>Simplify compelling innovation and long-term high.</li>
-                <li>Quickly streamline focused deliverables whereas progressive.</li>
-            </ul>
-            <a href="#">Read More</a>
+        <div class="wrapper page-mockup">
+            <div class="box-text">
+                <h2 class="title-h2"><span>About Our Company</span>Who We Are?</h2>
+                <div class="line"></div>
+                <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+                <p class="decription">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
+                <ul class="list-decription">
+                    <li>Simplify compelling innovation and long-term high.</li>
+                    <li>Quickly streamline focused deliverables whereas progressive.</li>
+                </ul>
+                <a href="#" class="btn-blue">Read More</a>
+            </div>
+            <div class="mockup"></div>
+        </div>
+        <div class="page page-grey">
+            <div class="center wrapper">
+                    <h2 class="title-h2"><span>See Portfolio</span>Recent Works</h2>
+                    <div></div>
+                    <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
+            </div>
         </div>
 
-        <div class="center wrapper">
-            <h2 class="title-h2"><span>See Portfolio</span>Recent Works</h2>
-            <div></div>
-            <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
-        </div>
         
     </main>
     <footer>
