--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
                     <div class="box-item">
                         <div class="box-icon"><i class="fas fa-mobile-alt"></i></div>
                         <h2>100% Responsive Design</h2>
-                        <p class="decription">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                        <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
                     </div>
                     <div class="box-item box-item-center">
                         <div class="box-icon"><i class="far fa-lightbulb"></i></div>
                         <h2>Unlimited Features</h2>
-                        <p class="decription">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                        <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
                     </div>
                     <div class="box-item">
                         <div class="box-icon box-icon-pen"><i class="fas fa-pencil-alt"></i></div>
                         <h2>Fully Customizable</h2>
-                        <p class="decription">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
+                        <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin.</p>
                     </div>
                 </div>
             </div>
@@ -83,9 +83,9 @@
             <div class="box-text">
                 <h2 class="title-h2"><span>About Our Company</span>Who We Are?</h2>
                 <div class="line"></div>
-                <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
-                <p class="decription">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
-                <ul class="list-decription">
+                <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+                <p class="description">Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos.</p>
+                <ul class="list-description">
                     <li>Simplify compelling innovation and long-term high.</li>
                     <li>Quickly streamline focused deliverables whereas progressive.</li>
                 </ul>
@@ -96,8 +96,65 @@
         <div class="page page-grey">
             <div class="center wrapper">
                     <h2 class="title-h2"><span>See Portfolio</span>Recent Works</h2>
-                    <div></div>
-                    <p class="decription">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
+                    <div class="line-center"></div>
+                    <p class="description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
+            </div>
+        </div>
+        <div class="photo">
+            <div class="photo-item">
+                <img src="img/img1.jpg" alt="Photo">
+                <div class="photo-text">
+                    <h3>Website Template</h3>
+                    <p>Ui Design / Website</p>
+                </div>
+                <div class="photo-btn">
+                    <a href="" class="find"><i class="fas fa-search"></i></a>
+                    <a href="" class="link"><i class="fas fa-link"></i></a>
+                </div>
+            </div>
+            <div class="photo-item">
+                <img src="img/img2.jpg" alt="Photo">
+                <div class="photo-text">
+                    <h3>Website Template</h3>
+                    <p>Ui Design / Website</p>
+                </div>
+                <div class="photo-btn">
+                    <a href="" class="find"><i class="fas fa-search"></i></a>
+                    <a href="" class="link"><i class="fas fa-link"></i></a>
+                </div>
+            </div>
+            <div class="photo-item">
+                <img src="img/img3.jpg" alt="Photo">
+                <div class="photo-text">
+                    <h3>Website Template</h3>
+                    <p>Ui Design / Website</p>
+                </div>
+                <div class="photo-btn">
+                    <a href="" class="find"><i class="fas fa-search"></i></a>
+                    <a href="" class="link"><i class="fas fa-link"></i></a>
+                </div>
+            </div>
+            <div class="photo-item">
+                <img src="img/img4.jpg" alt="Photo">
+                <div class="photo-text">
+                    <h3>Website Template</h3>
+                    <p>Ui Design / Website</p>
+                </div>
+                <div class="photo-btn">
+                    <a href="" class="find"><i class="fas fa-search"></i></a>
+                    <a href="" class="link"><i class="fas fa-link"></i></a>
+                </div>
+            </div>
+            <div class="photo-item">
+                <img src="img/img5.jpg" alt="Photo">
+                <div class="photo-text">
+                    <h3>Website Template</h3>
+                    <p>Ui Design / Website</p>
+                </div>
+                <div class="photo-btn">
+                    <a href="" class="find"><i class="fas fa-search"></i></a>
+                    <a href="" class="link"><i class="fas fa-link"></i></a>
+                </div>
             </div>
         </div>
 
