--- a/index.html
+++ b/index.html
@@ -243,7 +243,18 @@
                     </div>
                 </div>
         </div>
-
+        <div class="page page-bg">
+            <div class="wrapper">
+                <div class="title center">
+                    <div class="element element-top"></div>
+                    <p>Hand Crafted with Love</p>
+                    <h1>Beautiful Websites for all</h1>
+                    <p class="center"><a href="#" class="btn">Take a Tour</a></p>
+                    <div class="element element-bottom"></div>
+                </div>  
+                
+            </div>
+        </div>
     </main>
     <footer>
 
